# atak-signal-bot

./: .env  .gitignore  README.md  docker-compose.test.yml  docker-compose.yml
signal-listener-publisher/: Dockerfile  Dockerfile.test  README.md  pyproject.toml
signal-listener-publisher/app/: client.py  config.py  main.py  message_processor.py  publisher.py  watcher.py
signal-listener-publisher/app/tests/: test_client.py  test_message_processor.py  test_publisher.py
subscriber-cot-sender/: Dockerfile  pyproject.toml
subscriber-cot-sender/app/: broker_subscriber.py  config.py  http_client.py  main.py  tcp_client.py  watcher.py  xml_transformer.py
tak-server/: Dockerfile
