[project]
name = "publisher"
version = "0.1.0"
description = "A simple signal listener and publisher"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.9",
    "confluent-kafka>=2.6.1",
    "orjson>=3.10.12",
    "regex>=2024.11.6",
    "watchdog>=6.0.0",
    "websockets>=14.1",
]
