[project]
name = "publisher"
version = "0.1.0"
description = "A simple signal listener and publisher"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.9",
    "aioresponses>=0.7.7",
    "confluent-kafka>=2.6.1",
    "orjson>=3.10.12",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.4",
    "watchdog>=6.0.0",
    "websockets>=14.1",
]
